test/domains/compilerErrors/assoc-from-tuple-of-ranges.chpl
// This was legal since 791f0d3488a until #24507

var D2: domain(int);
D2 = (1..3, 3..6);
